[package]
name = "keyzcli"
version = "0.1.2"
edition = "2021"
description = "CLI for keyz"
license = "MIT"
repository = "https://github.com/viktor111/keyz_cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full", "time"] }
ctrlc = "3.2.4"
